[package]
name = "openai_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api = { git = "https://github.com/deontologician/openai-api-rust", branch = "main" }
tokio = { version = "^0.2.5", features = ["full"]}
